<resources>
    <string name="app_name">RPG Corner</string>
    <string name="rpgs_name">Xenoblade Chronicles Definitive Edition</string>
    <string name="detail">Detail</string>
    <string name="price">$59.99</string>
    <string name="available_now">Available Now!</string>
    <string name="buy_digital">BUY DIGITAL</string>
    <string name="see_original_post">See Original Post</string>
    <string name="Open">Sidebar Open</string>
    <string name="Close">Sidebar Close</string>
    <string name="copyright">© 2020, HKM. All Rights Reserved.</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
