<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_game_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                tools:src="@android:color/darker_gray"
                tools:ignore="contentDescription"/>
            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="50pt"
                android:background="#8D000000"
                android:gravity="center_vertical"
                android:padding="8dp"
                tools:text="@string/rpgs_name"
                android:textSize="20sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/white" />
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_sell_photo"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="end"
                tools:src="@android:color/black" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:text="@string/available_now"
                android:gravity="center_vertical" />
            <TextView
                android:id="@+id/tv_item_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                tools:text="@string/price"
                android:gravity="end"
                android:textColor="@android:color/black"/>
        </FrameLayout>

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/btn_store"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:linksClickable="true"
            android:clickable="true"
            android:autoLink="web"
            android:text="@string/buy_digital" />

        <TextView
            android:id="@+id/tv_item_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/detail"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/btn_source"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:linksClickable="true"
            android:clickable="true"
            android:autoLink="web"
            android:padding="8dp"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:text="@string/see_original_post"
            android:background="@drawable/round_shape_btn"/>
    </LinearLayout>
</ScrollView>