<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_item_photo"
        android:layout_width="129dp"
        android:layout_height="195dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        tools:src="@android:color/darker_gray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/img_item_photo"
        android:layout_toRightOf="@id/img_item_photo"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="20sp"
            android:maxLines="2"
            android:textStyle="bold"
            tools:text="@string/rpgs_name" />
        <TextView
            android:id="@+id/tv_item_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:ellipsize="end"
            android:maxLines="5"
            tools:text="@string/detail" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_item_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                tools:text="@string/price"
                android:gravity="start"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/black"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_sell_photo"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="end"
                tools:src="@android:color/darker_gray" />
        </FrameLayout>

    </LinearLayout>
</RelativeLayout>